fixed bug with a too wide hitbox in ba button

--- a/sass/navbar.scss
+++ b/sass/navbar.scss
@@ -46,7 +46,7 @@
     }
 
     .wide{
-        width: 50ch;
+        width: 18ch;
     }
 
     .dropdown{
